--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ryo-gui-wallet",
-  "version": "1.0.0",
+  "name": "ryo-wallet-atom",
+  "version": "1.0.1",
   "description": "Modern GUI interface for Ryo Currency",
   "productName": "Ryo Wallet Atom",
   "cordovaId": "com.ryo-currency.ryo-gui-wallet",
