--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^8.2.1",
     "devtron": "^1.4.0",
     "electron": "^2.0.0",
+    "electron-builder": "^20.28.4",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^12.1.1",
