--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-window-state": "^5.0.2",
     "object-assign-deep": "^0.4.0",
     "portscanner": "^2.2.0",
+    "promise-queue": "^2.2.5",
     "qrcode.vue": "^1.6.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
