--- a/package.json
+++ b/package.json
@@ -9,28 +9,39 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
+    "rebuild": "electron-rebuild -f -w better-sqlite3",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-sqlite3": "^5.4.0",
+    "big-integer": "^1.6.41",
+    "chart.js": "^2.8.0",
+    "dateformat": "^3.0.3",
     "electron-window-state": "^5.0.2",
+    "exports-loader": "^0.7.0",
     "object-assign-deep": "^0.4.0",
     "portscanner": "^2.2.0",
     "promise-queue": "^2.2.5",
     "qrcode.vue": "^1.6.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "rotating-file-stream": "^1.4.1",
+    "ryo-core-js": "git://github.com/mosu-forge/ryo-core-js.git",
+    "vue-chartjs": "^3.4.2",
     "vue-i18n": "^8.8.0",
     "vue-timeago": "^5.0.0",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "devtron": "^1.4.0",
     "electron": "^4.0.4",
-    "electron-builder": "^20.28.4",
+    "electron-builder": "^20.40.2",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-rebuild": "^1.8.4",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -40,8 +51,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.1.0",
-    "node-sass": "^4.9.3",
-    "quasar-cli": "^0.17.23",
+    "node-sass": "^4.12.0",
+    "quasar-cli": "^0.17.24",
     "sass-loader": "^7.1.0",
     "strip-ansi": "^3.0.1"
   },
