--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "big-integer": "^1.6.41",
     "chart.js": "^2.8.0",
     "dateformat": "^3.0.3",
+    "electron-is-dev": "^1.1.0",
     "electron-window-state": "^5.0.2",
     "exports-loader": "^0.7.0",
     "object-assign-deep": "^0.4.0",
