Add archiver dependency

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "axios": "^0.18.1",
     "better-sqlite3": "^5.4.0",
     "big-integer": "^1.6.41",
